@@ -38,6 +38,11 @@ Tommy McCabe 	      rocketjet314@yahoo.com		31 May 2004
 
 -------------------------------------------------------------------------------
 
+Thu Jun 03 21:47:13 CST 2004    Claudio Matsuoka <claudio@conectiva.com>
+
+	* fixed format specifiers to correctly displaysegment sizes as unsigned
+	  values, and to display debug messages correctly.
+
 Thu Jun 03 07:48:25 CST 2004	Eduardo Habkost <ehabkost@conectiva.com.br>
 
 	* Fixed wrong struct field name for arch/i86/drivers/block/doshd.c
